; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/broadcom/extr_bcm_mips.c_bcm_mips_init_cpuirq_unavail.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/broadcom/extr_bcm_mips.c_bcm_mips_init_cpuirq_unavail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm_mips_softc = type { i32 }
%struct.bcm_mips_cpuirq = type { i32, i64, i32*, i32*, i32*, i64, %struct.bcm_mips_softc* }

@.str = private unnamed_addr constant [27 x i8] c"cpuirq already initialized\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bcm_mips_softc*, %struct.bcm_mips_cpuirq*)* @bcm_mips_init_cpuirq_unavail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm_mips_init_cpuirq_unavail(%struct.bcm_mips_softc* %0, %struct.bcm_mips_cpuirq* %1) #0 {
  %3 = alloca %struct.bcm_mips_softc*, align 8
  %4 = alloca %struct.bcm_mips_cpuirq*, align 8
  store %struct.bcm_mips_softc* %0, %struct.bcm_mips_softc** %3, align 8
  store %struct.bcm_mips_cpuirq* %1, %struct.bcm_mips_cpuirq** %4, align 8
  %5 = load %struct.bcm_mips_softc*, %struct.bcm_mips_softc** %3, align 8
  %6 = call i32 @BCM_MIPS_LOCK(%struct.bcm_mips_softc* %5)
  %7 = load %struct.bcm_mips_cpuirq*, %struct.bcm_mips_cpuirq** %4, align 8
  %8 = getelementptr inbounds %struct.bcm_mips_cpuirq, %struct.bcm_mips_cpuirq* %7, i32 0, i32 6
  %9 = load %struct.bcm_mips_softc*, %struct.bcm_mips_softc** %8, align 8
  %10 = icmp eq %struct.bcm_mips_softc* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @KASSERT(i32 %11, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.bcm_mips_softc*, %struct.bcm_mips_softc** %3, align 8
  %14 = load %struct.bcm_mips_cpuirq*, %struct.bcm_mips_cpuirq** %4, align 8
  %15 = getelementptr inbounds %struct.bcm_mips_cpuirq, %struct.bcm_mips_cpuirq* %14, i32 0, i32 6
  store %struct.bcm_mips_softc* %13, %struct.bcm_mips_softc** %15, align 8
  %16 = load %struct.bcm_mips_cpuirq*, %struct.bcm_mips_cpuirq** %4, align 8
  %17 = getelementptr inbounds %struct.bcm_mips_cpuirq, %struct.bcm_mips_cpuirq* %16, i32 0, i32 5
  store i64 0, i64* %17, align 8
  %18 = load %struct.bcm_mips_cpuirq*, %struct.bcm_mips_cpuirq** %4, align 8
  %19 = getelementptr inbounds %struct.bcm_mips_cpuirq, %struct.bcm_mips_cpuirq* %18, i32 0, i32 0
  store i32 -1, i32* %19, align 8
  %20 = load %struct.bcm_mips_cpuirq*, %struct.bcm_mips_cpuirq** %4, align 8
  %21 = getelementptr inbounds %struct.bcm_mips_cpuirq, %struct.bcm_mips_cpuirq* %20, i32 0, i32 4
  store i32* null, i32** %21, align 8
  %22 = load %struct.bcm_mips_cpuirq*, %struct.bcm_mips_cpuirq** %4, align 8
  %23 = getelementptr inbounds %struct.bcm_mips_cpuirq, %struct.bcm_mips_cpuirq* %22, i32 0, i32 3
  store i32* null, i32** %23, align 8
  %24 = load %struct.bcm_mips_cpuirq*, %struct.bcm_mips_cpuirq** %4, align 8
  %25 = getelementptr inbounds %struct.bcm_mips_cpuirq, %struct.bcm_mips_cpuirq* %24, i32 0, i32 2
  store i32* null, i32** %25, align 8
  %26 = load %struct.bcm_mips_cpuirq*, %struct.bcm_mips_cpuirq** %4, align 8
  %27 = getelementptr inbounds %struct.bcm_mips_cpuirq, %struct.bcm_mips_cpuirq* %26, i32 0, i32 1
  store i64 0, i64* %27, align 8
  %28 = load %struct.bcm_mips_softc*, %struct.bcm_mips_softc** %3, align 8
  %29 = call i32 @BCM_MIPS_UNLOCK(%struct.bcm_mips_softc* %28)
  ret i32 0
}

declare dso_local i32 @BCM_MIPS_LOCK(%struct.bcm_mips_softc*) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @BCM_MIPS_UNLOCK(%struct.bcm_mips_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
